# WBTechL0

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  startup.sh
API/: add_order.http  get_order.http
migrations/: V1__init_down.sql  V1__init_up.sql
src/: lib.rs  main.rs
src/application/: app_state.rs  mod.rs
src/application/controllers/: add_order.rs  error_handler.rs  get_order.rs  mod.rs
src/controllers/: add_order.rs  get_order.rs  mod.rs
src/domain/: mod.rs
src/domain/interfaces/: cache.rs  database.rs  mod.rs  order_service.rs  repository.rs
src/domain/models/: delivery.rs  item.rs  mod.rs  order.rs  payment.rs
src/infrastructure/: cache.rs  database.rs  mod.rs
src/infrastructure/services/: mod.rs  order_service.rs
src/infrastructure/storage/: cache.rs  database.rs  errors.rs  mod.rs  repository.rs
src/utils/: interior.rs  mod.rs
tests/: test_order_service.rs
