[package]
name = "L0"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "rt"] }
tokio-postgres = "0.7.11"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
env_logger = "0.11.5"